# calibre

./: AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE-MIT  README.md  SECURITY.md  deny.toml  flake.nix
.github/workflows/: ci.yml  docs.yml  nix.yml  security.yml
docs/: compatibility.md  design.md  provenance.md  roadmap.md  testing.md
scripts/: compatibility-test.sh
src/: audit.rs  books.rs  covers.rs  custom_columns.rs  error.rs  formats.rs  ids.rs  lib.rs  library.rs  model.rs  opf.rs  paths.rs  recovery.rs  schema.rs  sql.rs  trash.rs
tests/: calibre_oracle.rs  library.rs  property.rs
tests/fixtures/: replacement.txt  sample.epub  sample.txt
tests/support/: mod.rs
